adjust /image css to avoid audio-holder overlap

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -647,7 +647,7 @@ a {
 }
 
 #audio-holder-2-2 {
-    padding-top: 30px;
+    margin-top: -80px;
 }
 
 #performing-garage {
